release 1.12
- Fixed issue 907
  http://java.net/jira/browse/JERSEY-906
  Modified documentation (user guide) to reflect current implementation (client filter execution order).
- Fixed issue 906
  http://java.net/jira/browse/JERSEY-906
  Added missing grizzly-framework-2.1.2.jar file to the list of jars 'Non-maven developers require:' in getting-started guide
- Fixed issue 902
  http://java.net/jira/browse/JERSEY-902
  Fix broken links to JSR311 Javadocs in Overview of JAX-RS 1.1.1 chapter of Jersey User Guide.
- Fixed issue 840
  http://java.net/jira/browse/JERSEY-840
  Added jersey-grizzly2.jar to list required for non-maven developers to fix broken Getting Started section in the Jersey User Guide.
- Grizzly 2 version update (to 2.2.1)
- Fixed issue 898
  http://java.net/jira/browse/JERSEY-898
  Added missing null checks to ContainerRequest.evaluatePreconditions(Date | EntityTag)
- Fixed issue 876
  http://java.net/jira/browse/JERSEY-876
  Adapted to recent change in Grizzly 1.x API.

release 1.11 (12-2011)
- Fixed issue 875
  http://java.net/jira/browse/JERSEY-875
  Fixed broken jersey-quickstart-ejb archetype, removed jaxb dependency from pom, it's not required.
- Fixed issue 838
  http://java.net/jira/browse/JERSEY-838
  Fixed broken jersey-quickstart-grizzly2 archetype, added missing dependency to pom and corrected package import.
- Fixed issue 849
  http://java.net/jira/browse/JERSEY-849
  "Registering with Twitter" section updated to match current Twitter UI in samples/oauth-client-twitter/README.html
- Fixed issue 844
  http://java.net/jira/browse/JERSEY-844
  Links pointing to "hypermedia-action-sample" broken in user guide
- Fixed issue 835
  http://java.net/jira/browse/JERSEY-835
  JsonLexer used to throw java.lang.Error in case of syntactical errors with the JSON stream. Fixed to throw JsonFormatException which gets subsequently wrapped (by the message processing chain) an a WebApplicationException with the status code 400.
- Fixed issue 627